--- a/package.json
+++ b/package.json
@@ -2,21 +2,20 @@
   "name": "http_server",
   "version": "1.0.0",
   "main": "index.js",
-  "type":"module",
-  
+  "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
     "lint": "eslint . --ext .js,.cjs,.mjs",
     "format": "prettier --write ."
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
